# monerokon

./: README.md  cargo-generate2.toml
exercise/: Cargo.toml
exercise-1/: rust-toolchain.toml
exercise-1/.cargo/: config
exercise-1/src/: lib.rs
exercise-1/tests/: test.rs
exercise-2/: README.md
exercise-2/src/: lib.rs
exercise-2/tests/: test.rs
exercise-3/src/: lib.rs
exercise-3/tests/: test.rs
exercise-4/src/: lib.rs
exercise-4/tests/: test.rs
exercise/src/: lib.rs
exercise/tests/: test.rs
solution/: Cargo.toml
solution/src/: lib.rs
solution/tests/: test.rs
